# exercise1-markaren

./: .gitignore  CMakeLists.txt  README.md  Vector3.hpp  Vector3Class.cpp  Vector3Class.hpp  main.cpp  main2.cpp
.github/classroom/: autograding.json
include/exercise1/: person.hpp
src/: CMakeLists.txt  person.cpp
tests/: CMakeLists.txt  test_person.cpp
